; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/cloudabi/extr_cloudabi_fd.c_cloudabi_sys_fd_replace.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/cloudabi/extr_cloudabi_fd.c_cloudabi_sys_fd_replace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i64* }
%struct.cloudabi_sys_fd_replace_args = type { i32, i32 }

@FDDUP_MUSTREPLACE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cloudabi_sys_fd_replace(%struct.thread* %0, %struct.cloudabi_sys_fd_replace_args* %1) #0 {
  %3 = alloca %struct.thread*, align 8
  %4 = alloca %struct.cloudabi_sys_fd_replace_args*, align 8
  %5 = alloca i32, align 4
  store %struct.thread* %0, %struct.thread** %3, align 8
  store %struct.cloudabi_sys_fd_replace_args* %1, %struct.cloudabi_sys_fd_replace_args** %4, align 8
  %6 = load %struct.thread*, %struct.thread** %3, align 8
  %7 = load i32, i32* @FDDUP_MUSTREPLACE, align 4
  %8 = load %struct.cloudabi_sys_fd_replace_args*, %struct.cloudabi_sys_fd_replace_args** %4, align 8
  %9 = getelementptr inbounds %struct.cloudabi_sys_fd_replace_args, %struct.cloudabi_sys_fd_replace_args* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.cloudabi_sys_fd_replace_args*, %struct.cloudabi_sys_fd_replace_args** %4, align 8
  %12 = getelementptr inbounds %struct.cloudabi_sys_fd_replace_args, %struct.cloudabi_sys_fd_replace_args* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @kern_dup(%struct.thread* %6, i32 %7, i32 0, i32 %10, i32 %13)
  store i32 %14, i32* %5, align 4
  %15 = load %struct.thread*, %struct.thread** %3, align 8
  %16 = getelementptr inbounds %struct.thread, %struct.thread* %15, i32 0, i32 0
  %17 = load i64*, i64** %16, align 8
  %18 = getelementptr inbounds i64, i64* %17, i64 0
  store i64 0, i64* %18, align 8
  %19 = load i32, i32* %5, align 4
  ret i32 %19
}

declare dso_local i32 @kern_dup(%struct.thread*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
